add update /delete/get - product endpoints- in swagger file
