# Controller/products-ctrl.js
@@ -1,45 +1,43 @@
 const Products = require('../Model/products-model')
 const Stock = require('../Model/Stock-model');
 
-addProducts = async (req, res) => {
-     const body = req.body
-     if (!body) {
-          return res.status(400).json({
-               success: false,
-               error: 'You must provide a products',
-          })
-     }
-     const products = new Products(body)
+const addProducts = async (req, res) => {
+  try {
+    const body = req.body;
+    if (!body) {
+      return res.status(400).json({
+        success: false,
+        error: 'You must provide a products',
+      });
+    }
+    const products = new Products(body);
 
-     if (!products) {
-          return res.status(400).json({ success: false, error: err })
-     }
+    if (!products) {
+      return res.status(400).json({ success: false, error: 'Failed to create product' });
+    }
 
-     const dbProduct = await Products.create(products)
-     if (dbProduct) {
-          const newStock = { Quantity: 8, ProductId:dbProduct._id}
-          const result = await Stock.create(newStock)
-          if(result){
-               return res.status(201).json({
-                    success: true,
-                    id: dbProduct._id,
-                    message: 'products Added and Stocks Updated',
-               
-               })
-          
-        
-          .catch(error => {
-               return res.status(400).json({
-                    error,
-                    message: 'products not added!',
-               })
-          })
-}
-     }
+    const dbProduct = await Products.create(products);
+    if (dbProduct) {
+      const newStock = { Quantity: 8, ProductId: dbProduct._id };
+      const result = await Stock.create(newStock);
 
-
-
+      if (result) {
+        return res.status(201).json({
+          success: true,
+          id: dbProduct._id,
+          message: 'Products Added and Stocks Updated',
+        });
+      }
+    }
+  } catch (error) {
+    console.error(error);
+    return res.status(500).json({
+      error,
+      message: 'Internal server error',
+    });
+  }
 };
+
 
 
 const updateProducts = async (req, res) => {
@@ -74,12 +72,12 @@ const updateProducts = async (req, res) => {
    else {
      return res.status(400).json({
        error,
-       message: 'stock not updated!',
+       message: 'Product not updated!',
      });
    }
 
 };
-getproducts = async (req, res) => {
+const getproducts = async (req, res) => {
      try {
        const products = await Products.find({}).exec();
    
@@ -97,7 +95,7 @@ getproducts = async (req, res) => {
      }
    };
    
-   deleteProduct = async (req, res) => {
+   const deleteProduct = async (req, res) => {
      console.log(req.params.id);
     const products =  await Products.findOneAndDelete({ _id: req.params.id }) 
       if (!products) {
